<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.blogsot.ostas.fibonacci</groupId>
	<artifactId>fibonacci-deep-dive-sources</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>fibonacci-deep-dive-sources</name>
	<description>Companion sources for Fibonacci Deep Dive article</description>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>data-types-limitations</source>
                                <source>fibonacci-debugger</source>
                                <source>recursion-tree</source>
                                <source>recursion-tree-animation</source>
                                <source>recursive-time-exec</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source> 
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>